# delb-py-reference-plugins

./: .gitignore  pyproject.toml  setup.py  test.py
.github/workflows/: tests.yml
delb_reference_plugins/: custom_loader.py  header_properties.py  parser_adapter.py  tei_header_properties.py  xpath_function.py
