[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "delb-reference-plugins"
version = "0.4"  # this shall match the delb version it relates to
description = "A package with spare non-sense plugins for delb as developer's reference."
authors = [{name = "Frank Sachsenheim"}]
license = {text = "AGPL-3.0-only"}
dependencies = ["delb[https-loader]~=0.4"]

[project.entry-points.delb]
custom-loader = "delb_reference_plugins.custom_loader"
header-properties = "delb_reference_plugins.tei_header_properties"
